# haskell

./: README.md  README.txt  test.hs
2020-2021/: simplefunc.hs
2020-2021/Parsley/: CHANGELOG.md  LICENSE  Parsley.cabal
2020-2021/howdy-aeon/: README.md
2020-2021/imperative/: Composition.hs  Filter.hs  traversal.cpp
2020-2021/programming-haskell/lesson_01/: test
2020-2021/programming-haskell/perusal/: alt-main  fibs.hs
2020-2021/quadratic/src/: Quadratic.hs
2020-2021/runit/: Program.hs
2022/bassbull/: bassbull.cabal
2022/bassbull/src/: Main.hs
archive-2018/: hello.hs
howdy-aeon/: howdy-aeon.cabal
imperative/: Traversal.hs
programming-haskell/: Notes.txt  factorial.hs  main.hs
programming-haskell/lesson_01/: great.hs  test.hs
programming-haskell/lesson_02/: exp.hs
programming-haskell/perusal/: alt-main-2.hs  alt-main.hs  factorial  main  ori.hs
quadratic/: package.yaml
runit/: Program.hs
